// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audit worklist render tests renders the completed tab 1`] = `
<CompletedAuditWorklistScreen
  onRefresh={[MockFunction]}
/>
`;

exports[`Audit worklist render tests renders the in progress tab 1`] = `
<InProgressAuditWorklistScreen
  onRefresh={[MockFunction]}
/>
`;

exports[`Audit worklist render tests renders the todo tab 1`] = `
<TodoAuditWorklistScreen
  onRefresh={[MockFunction]}
/>
`;
